guidelines collapse fix

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3450,36 +3450,6 @@ div.chooseTypeInline div label:hover {
   margin: 0.1em 0;
   display: inline-block;
 }
-  //
-  // .collapsetstyle {
-  //   /* display: none; */
-  //   /* position: absolute; */
-  //   top: .1em;
-  //   right: .1em;
-  //   width: 100%;
-  //   height: 2em;
-  //   transition: all 0.5s;
-  //   /* position:absolute; */
-  //   /* position: static; */
-  //  }
-  // i.collapsetstyle:before {
-  //   display: inline-block;
-  //   padding-left: 4px;
-  //   -webkit-transform: rotate(90deg);
-  //   -moz-transform: rotate(90deg);
-  //   transform: rotate(90deg);
-  //   position: absolute;
-  //   transition: all 0.5s;
-  //   top: 14px;
-  // }
-  // i.collapsetstyle h2 {
-  //  padding-left: 32px;
-  // }
-  // i.collapsetstyle.collapsed:before {
-  //  -webkit-transform: rotate(0deg);
-  //  -moz-transform: rotate(0deg);
-  //  transform: rotate(0deg);
-  // }
 
   .collapsetitle {
     position: relative;
@@ -3492,8 +3462,7 @@ div.chooseTypeInline div label:hover {
     width: 100%;
     height: 2em;
     transition: all 0.5s;
-    /* position:absolute; */
-    /* position: static; */
+     position: relative;
    }
   i.collapsetstyle:before {
     display: inline-block;
